# public/docs/openapi.yaml
@@ -39,11 +39,11 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: sequi
+                  example: quia
                 password:
                   type: string
                   description: ''
-                  example: qui
+                  example: excepturi
               required:
                 - email
                 - password
@@ -86,12 +86,12 @@ paths:
           in: query
           name: page
           description: ''
-          example: 2
+          example: 18
           required: false
           schema:
             type: integer
             description: ''
-            example: 2
+            example: 18
         -
           in: header
           name: Authorization
@@ -235,7 +235,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the contact.'
-        example: in
+        example: est
         required: true
         schema:
           type: string
@@ -248,12 +248,12 @@ paths:
           in: query
           name: page
           description: ''
-          example: 17
+          example: 6
           required: false
           schema:
             type: integer
             description: ''
-            example: 17
+            example: 6
         -
           in: header
           name: Authorization
@@ -345,11 +345,11 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: officia
+                  example: eveniet
                 description:
                   type: string
                   description: ''
-                  example: est
+                  example: ea
               required:
                 - name
     get:
@@ -385,7 +385,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the group.'
-        example: id
+        example: enim
         required: true
         schema:
           type: string
@@ -428,11 +428,11 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: id
+                  example: accusamus
                 description:
                   type: string
                   description: ''
-                  example: illo
+                  example: maxime
               required:
                 - name
   /v1/users:
@@ -503,19 +503,19 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: at
+                  example: assumenda
                 last_name:
                   type: string
                   description: ''
-                  example: in
+                  example: quam
                 email:
                   type: string
                   description: ''
-                  example: qui
+                  example: expedita
                 password:
                   type: string
                   description: ''
-                  example: officiis
+                  example: ut
                 profile_picture:
                   type: string
                   format: binary
@@ -523,11 +523,11 @@ paths:
                 group_id:
                   type: string
                   description: ''
-                  example: eligendi
+                  example: nisi
                 is_super_admin:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
               required:
                 - first_name
                 - last_name
@@ -542,12 +542,12 @@ paths:
           in: query
           name: id
           description: ''
-          example: cum
+          example: sed
           required: true
           schema:
             type: string
             description: ''
-            example: cum
+            example: sed
         -
           in: header
           name: Authorization
@@ -605,7 +605,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the user.'
-        example: 3fb6b305-dc1c-46dd-8312-c4194d147ce5
+        example: 39356693-1b71-40f3-a650-9ead72c6139d
         required: true
         schema:
           type: string
@@ -641,19 +641,19 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: dolor
+                  example: corporis
                 last_name:
                   type: string
                   description: ''
-                  example: sapiente
+                  example: accusantium
                 email:
                   type: string
                   description: ''
-                  example: aut
+                  example: consequatur
                 password:
                   type: string
                   description: ''
-                  example: itaque
+                  example: corporis
                 profile_picture:
                   type: string
                   format: binary
@@ -661,11 +661,42 @@ paths:
                 group_id:
                   type: string
                   description: ''
-                  example: explicabo
+                  example: fugit
                 is_super_admin:
                   type: boolean
                   description: ''
-                  example: false
+                  example: true
+                contacts:
+                  type: array
+                  description: ''
+                  example:
+                    - []
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        description: ''
+                        example: deleniti
+                      first_name:
+                        type: string
+                        description: ''
+                        example: neque
+                      last_name:
+                        type: string
+                        description: ''
+                        example: omnis
+                      email:
+                        type: string
+                        description: ''
+                        example: enim
+                      cp_no:
+                        type: string
+                        description: ''
+                        example: ut
+                    required:
+                      - first_name
+                      - last_name
               required:
                 - first_name
                 - last_name
